# LEDS_BJTU

./: .gitignore  README.md  pytest.ini  requirements.txt  run_simulation_tests.py  start_backend.bat  start_frontend.bat  validate_simulation_framework.py  立项.md
android/: .gitignore  gradle.properties  settings.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  qlh_llama_jni.cpp  qlh_llama_jni_stub.cpp
android/app/src/main/cpp/llama.cpp/: QLH_VENDOR_COMMIT.txt
docs/: Android SAF模型存储方案.md  Android llama.cpp Submodule迁移方案.md  Android版本远期计划.md  BUG清单-第4轮审查.md  P3.5-BUG审查报告-第四轮.md  P3.5-BUG审查报告.md  PC与Android端交互体验优化计划.md  PC完整任务Worker接线准入报告.md  Python后端冷启动优化方案.md  v0.1.7-Linux适配BUG清单.md  三种分布式拆分细化实施方案.md  从节点部署配置指南.md  任务图图树变换调研与实施计划.md  任务链下一阶段实施计划.md  分布式推理仿真测试计划.md  分布式推理流水线实施计划.md  分布式推理调度策略.md  分布式架构完善计划.md  分布式资源调度系统.md  分布式通信与日志审查报告.md  图算法.md  数据库测试指南.md  整体架构.md  文档状态与清理清单.md  日志功能完善建议.md  未解决问题汇总.md  核心技术原理.md  模块接口说明.md  测试与评判标准.md  混合分布式推理体系规划.md  纯Embedding节点处理+前端连接状态列计划.md  节点列表BUG审查报告.md  轻量化大模型分布式边缘推理优化系统.md  运行流程&异常处理.md  重模型实验支持计划-DeepSeek.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
models/: README.md
packaging/: README.md  build-cpu.bat  build-cuda.bat  build-installer.bat  launcher.py  pyi_rthook_ssl.py  qlh-cpu.spec  qlh-cuda.spec  requirements-cpu.txt  serve.py  setup-cuda.iss  setup.iss  test_minimal.py  test_minimal.spec
scripts/: benchmark_all.py  benchmark_compile.py  quantize_model.py  setup_test_db.py  test_kv_cache.py  verify_fixes.py  verify_windows_compatibility.py
src/: __init__.py  api_server.py  bootstrap.py  config.py  db.py  device_profiler.py  email_notifier.py  graph_orchestrator.py  llama_engine.py  local_store.py  model_config.py  model_downloader.py  model_module.py  review.py  (+11 more)
(+105 files in other folders)
